--- a/eShopLegacyMVCSolution/src/eShopLegacyMVC/Views/Shared/_Layout.cshtml
+++ b/eShopLegacyMVCSolution/src/eShopLegacyMVC/Views/Shared/_Layout.cshtml
@@ -1,11 +1,13 @@
-﻿<!DOCTYPE html>
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Catalog manager (MVC)</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    <link rel="stylesheet" href="~/Content/css" />
+    <script src="~/bundles/modernizr"></script>
 </head>
 <body>
     <header class="navbar navbar-light navbar-static-top">
@@ -20,9 +22,7 @@
             <h1 class="esh-header-title" >Catalog manager <span>(MVC)</span></h1>
         </div>
     </section>
-
     @RenderBody()
-
     <footer class="esh-app-footer">
         <div class="container">
             <article class="row">
@@ -32,16 +32,16 @@
                 <section class="col-sm-6">
                     <img class="esh-app-footer-text hidden-xs" src="~/images/main_footer_text.png" width="335" height="26" alt="footer text image" />
                     <br />
-                    @{ var sessionInfo = new HtmlString($"{HttpContext.Current.Session["MachineName"]}, {HttpContext.Current.Session["SessionStartTime"]}");}
+                    @{
+                        var sessionInfo = new Microsoft.AspNetCore.Html.HtmlString($"{@HttpContextAccessor.HttpContext.Session.GetString("MachineName")}, {@HttpContextAccessor.HttpContext.Session.GetString("SessionStartTime")}");
+                    }
                     <small>@sessionInfo</small>
                 </section>
-                
             </article>
         </div>
     </footer>
-
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+    <script src="~/bundles/jquery"></script>
+    <script src="~/bundles/bootstrap"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
