--- a/eShopLegacyMVCSolution/src/eShopLegacyMVC/Views/Catalog/Index.cshtml
+++ b/eShopLegacyMVCSolution/src/eShopLegacyMVC/Views/Catalog/Index.cshtml
@@ -9,7 +9,7 @@
         @Html.ActionLink("Create New", "Create", null, new { @class = "btn esh-button esh-button-primary" })
     </p>
 
-    @Html.Partial("CatalogTable", Model.Data)
+    @await Html.PartialAsync("CatalogTable", Model.Data)
 
     <div class="esh-pager">
         <div class="container">
